[metadata]
name=redis-client
version=attr: redis.__version__
author=Joongi Kim
author_email=me@daybreaker.info
long_description=file: README.md, CHANGES.md
long_description_content_type=text/markdown
description=Async-native Redis client
license=MIT
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Framework :: AsyncIO
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Software Development
url = https://github.com/achimnol/redis-client
project_urls =
    # Documentation = https://redis-client.readthedocs.io
    Tracker = https://github.com/achimnol/redis-client/issues
    Source = https://github.com/achimnol/redis-client
    # Code Coverage = https://codecov.io/github/achimnol/redis-client
platforms =
    any

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    build>=0.10.0
    wheel>=0.40.0
    twine~=4.0
    towncrier~=22.12
test =
    pytest~=7.4.2
    pytest-asyncio~=0.21
    pytest-cov
    pytest-mock
    codecov
dev =
    pre-commit
lint =
    black~=23.10.1
    ruff>=0.1.3
    ruff-lsp>=0.0.42
typecheck =
    mypy~=1.6.1
docs =
    sphinx~=7.2.6
    sphinx-rtd-theme~=1.3.0

[options.packages.find]
where = src

[bdist_wheel]
universal = false

[tool:pytest]
testpaths = tests

[mypy]
mypy_path = src

[mypy-pytest.*]
ignore_missing_imports = true
